@@ -1,4 +1,4 @@
-{ RCSid $Id: klems_half.cal,v 1.4 2018/08/26 05:33:46 greg Exp $ }
+{ RCSid $Id: klems_half.cal,v 1.5 2022/07/14 02:52:02 greg Exp $ }
 {
 	Compute interior bin for half Klems BSDF basis (0-72)
 	Returns -1 for wrong-side rays
@@ -12,8 +12,8 @@ Acos(x) : if(x-1, 0, if(-1-x, PI, acos(x))) / DEGREE;
 posangle(a) : if(-a, a + 2*PI, a) / DEGREE;
 Atan2(y,x) : posangle(atan2(y,x));
 
-khpola(r) : select(r, 6.5, 19.5, 32.5, 46.5, 61.5, 76.5, 90);
-khnaz(r) : select(r, 1, 8, 12, 16, 20, 12, 4);
+khpola(r) : select(r, 6.5, 19.5, 32.5, 45.5, 58.5, 71.5, 90);
+khnaz(r) : select(r, 1, 8, 12, 16, 20, 12, 8);
 khaccum(r) : if(r-.5, khnaz(r) + khaccum(r-1), 0);
 khfindrow(r, pol) : if(r-khpola(0)+.5, r,
 		if(pol-khpola(r), khfindrow(r+1, pol), r) );
